# different

Katya/: copyright Дамаскинская.docx
Katya/distr/: .gitignore  data__stats.txt  data_stats.txt  distr.csv  distr_year.csv  energy_out.txt  gradient.py  mag.csv  main.py  obr_2_Berea_6000_Time_X_Energy Konst.txt  onedim.py  research.py  selescted.csv  selscted.csv  year.csv
Katya/distr/design/: design.pro  design.py  design.ui
Katya/edem/api/Api/Core/: ApiIds.h  ApiTypes.h  IApi.h  IApiManager_1_0.h  ICustomPropertyDataApi_1_0.h  ICustomPropertyManagerApi_1_0.h  IFieldApi_1_0.h  IFieldManagerApi_1_0.h  IGeometryManagerApi_1_0.h  IGeometryManagerApi_1_1.h  IGeometryManagerApi_1_2.h  IParticleManagerApi_1_0.h  IParticleManagerApi_1_1.h  IParticleManagerApi_1_2.h  IParticleManagerApi_1_3.h  ISimulationManagerApi_1_0.h  ISimulationManagerApi_1_1.h  NCalcForceTypesV3_0_0.h  NExternalForceTypesV3_0_0.h  PluginConstants.h
Katya/edem/api/Api/Factories/: IPluginParticleFactory.h  IPluginParticleFactoryV2_0_0.h  IPluginParticleFactoryV2_1_0.h  PluginParticleFactoryCore.h
Katya/edem/api/LegacyApi/: sharedTypes.h
Katya/edem/api/Misc/: CGenericFileReader.cpp  CGenericFileReader.h  Helpers.h  HelpersV3_0_0.h
Katya/edem/coords/: Abq_input_script.py  Positions.txt  Radii.txt  Statistics.txt
Katya/edem/ownfactory/: CMakeLists.txt  config.txt  factory.cpp  factory.h  test.cpp
Katya/edem/ownfactory/plugin/: Positions.txt  Radii.txt
Katya/musen/: defect_cluster.py  defect_processor.py  defect_processor_log.txt
Masha/Сапер_Леха/: NewGameDiolog.py  Pattern.py  Soliter.py
(+238 files in other folders)
